# sigmatic

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
sigmatic/: __init__.py
sigmatic/cli/: __init__.py  main.py  output.py
sigmatic/cli/commands/: config.py  log.py  push.py  routes.py  serve.py  signals.py  sources.py  stats.py  watch.py
sigmatic/monitor/: app.js  index.html  style.css
sigmatic/server/: __init__.py  app.py  config.py  database.py  dependencies.py
sigmatic/server/adapters/: __init__.py  base.py  generic.py  tradingview.py
sigmatic/server/middleware/: __init__.py  auth.py  logging.py
sigmatic/server/models/: __init__.py  api_key.py  audit.py  base.py  delivery.py  outcome.py  route.py  signal.py  source.py
sigmatic/server/routes/: health.py  ingest.py  outcomes.py  routes.py  signals.py  sources.py  ws.py
sigmatic/server/schemas/: route.py  signal.py  source.py
sigmatic/server/services/: api_key_service.py  conflict_resolver.py  ingest_service.py  notification_service.py  outcome_tracker.py  quality_engine.py  quality_scorer.py  route_manager.py  signal_router.py  signal_service.py  source_manager.py  webhook_delivery.py
sigmatic/server/websocket/: __init__.py  manager.py
tests/: conftest.py  test_adapters.py  test_auth.py  test_cli.py  test_health.py  test_ingest.py  test_quality.py  test_routes.py  test_routing.py  test_signals.py  test_sources.py
